2001-01-25  Tristan Tarrant <nadir@users.sourceforge.net>
	mapedit/*: more work.

2001-01-25  Tristan Tarrant <nadir@users.sourceforge.net>
	* configure.in: check for libglade
	* mapedit/*: general hacking resulting in a libglade'ified ExultStudio.
	  Caveat: it is very picky about where it looks for stuff. 
	
2001-01-24  Jeff Freedman  <jeff@amy.nerble.net>
	* SI:  You can now start the Knight's Test (but you'll get stuck
	after entering).

2001-01-25  Ryan Nunn <triforce@merlin.net.au>
	* mingw_kuldges.h: Added so Exult can once again be compiled in Win32
	* makefile.win32, makefile.cygwin: -include mingw_kludges.h

2001-01-23  Jeff Freedman  <jeff@amy.nerble.net>
	* Sprite effects no longer get split up (at SI start).

2001-01-23  Tristan Tarrant <nadir@users.sourceforge.net>
	* mapedit/exultstudio.cc: framework for running both standalone and
	  as GIMP plugin (only former works at the moment).
	* mapedit/Makefile.am: add GIMP libs if needed

2001-01-23  Tristan Tarrant <nadir@users.sourceforge.net>
	* tools/Makefile.am, tools/u7shp.c: removed GIMP plugin from here
	* mapedit/Makefile.am, mapedit/u7shp.c: moved here
	* mapedit/*: librarized properly
	* mapedit/exultstudio.cc: Beginnings of "ExultStudio", a GIMP 
	  extension for managing shapes and palettes

2001-01-22  Jeff Freedman  <jeff@amy.nerble.net>

	* Add 'teleport' intrinsic to SI; Shamino now appears.

	* Better reporting in Usecode function tracing.  Also, SETR now
	does a RTS as well in BLACK GATE.  This fixes the test for blocked
	gangplank.

	
2001-01-22  Max Horn  <max@quendi.de>
	* utils.c: fixed switch_slashes() on MacOS to properly work with absolute path's; 
	  changed U7mkdir() to call switch_slashes()
	* ucmachine.cc: changed printf to cout
	* lots-of-files: changed sprintf to snprintf (to prevent potential overflow bugs)
	* lots-of-files: added some using std:: directives and some some std:: prefixes

2001-01-22  Tristan Tarrant <nadir@users.sourceforge.net>